Fix site description margin on mobile

--- a/css/mainStyle.css
+++ b/css/mainStyle.css
@@ -172,6 +172,7 @@ canvas.qrcode {
 @media (max-width: 500px) {
     h1.site-title {
         font-size: 3em;
+        margin: 0;
     }
 
     div.card {
